[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/guis/HostButton.png" type="Texture" id=1]
[ext_resource path="res://assets/guis/TextField.png" type="Texture" id=2]
[ext_resource path="res://assets/guis/JoinButton.png" type="Texture" id=3]
[ext_resource path="res://scenes/guis/MainMenu.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="CenterContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 648.0
margin_bottom = 432.0

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
margin_left = 168.0
margin_top = 110.0
margin_right = 360.0
margin_bottom = 242.0

[node name="HostButton" type="TextureButton" parent="Main/VBoxContainer"]
margin_right = 192.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="JoinButton" type="TextureButton" parent="Main/VBoxContainer"]
margin_top = 68.0
margin_right = 192.0
margin_bottom = 132.0
texture_normal = ExtResource( 3 )

[node name="Join" type="CenterContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 648.0
margin_bottom = 432.0

[node name="VBoxContainer" type="VBoxContainer" parent="Join"]
margin_left = 168.0
margin_top = 110.0
margin_right = 360.0
margin_bottom = 242.0

[node name="CenterContainer" type="CenterContainer" parent="Join/VBoxContainer"]
margin_right = 192.0
margin_bottom = 64.0

[node name="PanelContainer" type="PanelContainer" parent="Join/VBoxContainer/CenterContainer"]
margin_right = 192.0
margin_bottom = 64.0
custom_styles/panel = SubResource( 3 )

[node name="CodeEntry" type="TextureRect" parent="Join/VBoxContainer/CenterContainer/PanelContainer"]
margin_right = 192.0
margin_bottom = 64.0
texture = ExtResource( 2 )

[node name="Input" type="LineEdit" parent="Join/VBoxContainer/CenterContainer/PanelContainer"]
margin_right = 192.0
margin_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
custom_colors/selection_color = Color( 0.152941, 0.152941, 0.266667, 1 )
custom_colors/cursor_color = Color( 0.984314, 0.960784, 0.937255, 1 )
custom_colors/font_color_selected = Color( 0.94902, 0.827451, 0.670588, 1 )
custom_colors/font_color = Color( 0.984314, 0.960784, 0.937255, 1 )
align = 1
max_length = 6
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectButton" type="TextureButton" parent="Join/VBoxContainer"]
margin_top = 68.0
margin_right = 192.0
margin_bottom = 132.0
texture_normal = ExtResource( 3 )
